SAR-4339 added config to handle SSLEngine exception

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -71,6 +71,10 @@ application.router=prod.Routes
 # auditing (transaction monitoring) enabled.
 # The below controllers are the default exceptions to this rule.
 
+
+# retry mechanism in the latest version of http-verbs handles "SSLEngine closed already" exceptions
+http-verbs.retries.ssl-engine-closed-already.enabled = true
+
 controllers {
   # 300 is the default, you may need to change this according to your needs
   confidenceLevel = 300
